# qtimesheet

./: CMakeLists.txt  README.md  qtimesheet.geany
cmake/: PCH.cmake
src/: CMakeLists.txt  appicon.rc  install.nsi  mainwindow.cc  mainwindow.hh  qtimesheet.cc  qtimesheet.hh  qts.qrc  timerecord.cc  timerecord.hh
